project/test/semantics/unit/bad/Bad10_shouldCheckDuplicatesInFunctionParams.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        getValue: () -> Int = 50
        badFunction: (x: Int, y: Int, x: Int) -> Int = 339
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
